[gd_scene load_steps=8 format=3 uid="uid://d1ieqk72dudgf"]

[ext_resource type="PackedScene" uid="uid://yxn00wsmdix6" path="res://Characters/Character.tscn" id="1"]
[ext_resource type="Script" path="res://Characters/Enemies/Enemy.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c30k35ly7ca0q" path="res://Box/PlayerDetectionZone.tscn" id="3_2a6ox"]
[ext_resource type="Script" path="res://Characters/Hitbox.gd" id="4_7q765"]

[sub_resource type="SpriteFrames" id="SpriteFrames_u14jn"]
animations = []

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2cg2a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p67vi"]
radius = 5.09902

[node name="Enemy" instance=ExtResource("1")]
collision_layer = 4
collision_mask = 5
script = ExtResource("2")

[node name="AnimatedSprite2D" parent="." index="1"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_u14jn")
animation = &""

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_2cg2a")
}

[node name="PathTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
autostart = true

[node name="PlayerDetectionZone" parent="." index="6" instance=ExtResource("3_2a6ox")]
visible = false

[node name="Hitbox" type="Area2D" parent="." index="7"]
collision_mask = 2
script = ExtResource("4_7q765")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_p67vi")

[connection signal="timeout" from="PathTimer" to="." method="_on_path_timer_timeout"]
